syntax = "proto3";

package user.v1.favorites;

option go_package = "vw_user/api/v1/favorites;favorv1";

service Favorite {
    rpc CreateFavorites(CreateFavoritesReq) returns (CreateFavoritesResp) {}

    rpc ModifyFavorites(ModifyFavoritesReq) returns (ModifyFavoritesResp) {}

    rpc DeleteFavorites(DeleteFavoritesReq) returns (DeleteFavoritesResp) {}
}

message CreateFavoritesReq {
    string favorites_name = 1;
    int32 is_private      = 2;
    string description    = 3;
    int64 user_id         = 4;
}
message CreateFavoritesResp {
    int32 status_code = 1;
    string msg        = 2;
}

message ModifyFavoritesReq {
    int64 favorites_id             = 1;
    optional string favorites_name = 2;
    optional int32 is_private      = 3;
    optional string description    = 4;
}
message ModifyFavoritesResp {
    int32 status_code = 1;
    string msg        = 2;
}

message DeleteFavoritesReq {
    int64 favorites_id = 1;
}
message DeleteFavoritesResp {
    int32 status_code = 1;
    string msg        = 2;
}